유저 관련 사항 변경
